# pika

./: .checkignore  .codeclimate.yml  .coveragerc  .gitignore  .hgignore  .python-version  .readthedocs.yaml  .travis.yml  AGENTS.md  CHANGELOG  CHANGELOG-historical.md  CHANGELOG.md  CHANGELOG.rst  CHANGES  CONTRIBUTING.md  COPYING  HISTORY.md  LICENSE  LICENSE-MPL-Pika  MANIFEST.in  Makefile  README.md  README.rst  RELEASE.md  ROADMAP  THANKS  TODO  appveyor.yml  blocking_receive.py  codecov.yml  codegen.py  demo_receive.py  demo_send.py  docker-compose.yml  integration.cfg  mkdocs.yml  mypy.ini  nose.cfg  nose2.cfg  pylintrc  (+9 more)
.ci/: README.md  rabbitmq.conf.in  smoke_test.py
.ci/linux/: gha-setup.sh  rabbitmq.conf
.ci/macos/: gha-setup.sh
.ci/windows/: gha-setup.ps1
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/workflows/: _test.yaml  build-test.yaml  codeql-analysis.yml  deploy-docs.yaml  docs.yaml  legacy-python.yaml  lint.yaml  main.yaml  mypy.yaml  pr.yml  publish-prerelease.yaml  publish-pypi.yaml  publish-release.yaml  publish.yaml  publish.yml  release.yaml  tests.yml  yapf.yaml
ci/travis/: configure_rabbitmq_for_ssl.sh  get_ssl_test_vars.sh  openssl.cnf
debian/: changelog  control  copyright  python-pika.docs  rules  watch
debs/: libev-dev_4.15-3_amd64.deb  libev4_4.15-3_amd64.deb  locales-all_2.18-4_amd64.deb  locales_2.18-4_all.deb
docs/: Makefile  adapters.rst  amqp_object.rst  blocking_channel_use.rst  callback.rst  changelog.md  channel.rst  channel_use.rst  communicating.rst  conf.py  connecting.rst  connection.rst  contributing.md  contributors.md  contributors.rst  credentials.rst  data.rst  examples.md  examples.rst  exceptions.rst  faq.md  faq.rst  frame.rst  heartbeat.rst  history.md  index.md  index.rst  intro.md  intro.rst  log.rst  object.rst  requirements.txt  simplebuffer.rst  spec.rst  table.rst  utils.rst  version_history.rst
docs/css/: mkdocstrings.css
docs/examples/: asynchronous_consumer_example.md  asynchronous_consumer_example.rst  asynchronous_publisher_example.md  asynchronous_publisher_example.rst  asyncio_consumer.md  asyncio_consumer.rst  blocking_basic_get.md  blocking_basic_get.rst  blocking_consume.md  blocking_consume.rst  blocking_consume_recover.rst  blocking_consume_recover_multiple_hosts.md  blocking_consume_recover_multiple_hosts.rst  blocking_consume_recover_retry.rst  blocking_consumer_generator.md  blocking_consumer_generator.rst  blocking_delivery_confirmations.md  blocking_delivery_confirmations.rst  blocking_publish_mandatory.md  blocking_publish_mandatory.rst  comparing_publishing_sync_async.md  comparing_publishing_sync_async.rst  connecting_async.md  connecting_async.rst  direct_reply_to.md  direct_reply_to.rst  heartbeat_and_blocked_timeouts.md  heartbeat_and_blocked_timeouts.rst  index.rst  long_running_publisher_threaded.md  publisher_confirms_threaded.md  threaded_consumer.md  threaded_publisher.md  tls_mutual_authentication.md  tls_mutual_authentication.rst  tls_server_authentication.md  tls_server_authentication.rst  tls_server_uathentication.rst  tornado_consumer.md  tornado_consumer.rst  (+4 more)
docs/modules/: channel.md  channel.rst  connection.md  connection.rst  credentials.md  credentials.rst  delivery_mode.md  delivery_mode.rst  exceptions.md  index.md  index.rst  parameters.md  parameters.rst  spec.md  spec.rst
examples/: README.md  async_as_callback.py  asynchronous_consumer_example.py  asynchronous_publisher_example.py  asynchronous_reconnecting_consumer.py  asyncio_consumer_example.py  basic_consumer_threaded.py  basic_publisher_threaded.py  blocking_basic_get.py  blocking_consume.py  blocking_consume_recover_multiple_hosts.py  blocking_consume_recover_multiple_hosts_retry.py  blocking_consume_tls.py  blocking_consumer_generator.py  blocking_delivery_confirmations.py  blocking_publish_mandatory.py  comparing_publishing_async.py  comparing_publishing_sync.py  confirmation.py  connecting_async.py  consume.py  consume_recover.py  consume_recover_retry.py  consumer_queued.py  consumer_simple.py  demo_get.py  demo_receive.py  demo_relay.py  demo_send.py  demo_send_confirmed.py  demo_ssl_receive.py  demo_ssl_send.py  demo_tornado.html  demo_tornado.py  demo_twisted.py  direct_reply_to.py  fast_receive.py  heartbeat_and_blocked_timeouts.py  heatbeat_and_blocked_timeouts.py  long_running_publisher.py  (+22 more)
examples/blocking/: demo_get.py  demo_receive.py  demo_send.py
examples/libev/: pika  publish.py  pull.py  push.py  query.py  (+2 more)
pika/: __init__.py  _utils.py  adapter.py  amqp_object.py  asyncore_adapter.py  blocking_adapter.py  callback.py  channel.py  codec.py  compat.py  connection.py  credentials.py  data.py  delivery_mode.py  diagnostic_utils.py  event.py  exceptions.py  exchange_type.py  frame.py  frames.py  heartbeat.py  log.py  object.py  reconnection_strategies.py  simplebuffer.py  spec.py  specbase.py  table.py  tcp_socket_opts.py  template.py  tornado_adapter.py  utils.py  validators.py
rabbitmq/: __init__.py  asyncore_adapter.py  blocking_adapter.py  channel.py  codec.py  connection.py  event.py  exceptions.py  simplebuffer.py  specbase.py  table.py
scripts/: build-deb.sh  build-pkg-functions  build-rpm.sh
testdata/: install-macos.sh  install.ps1  install_macos.sh  rabbitmq.conf.in  versions.json  wait-epmd.ps1  wait-rabbitmq.ps1
tests/: README  README.md  adapter_connections.py  adapter_tests.py  amqp_object_tests.py  async-send-get-test.py  blocking_channel_tests.py  callback_tests.py  channel_tests.py  conftest.py  connection_test.py  connection_tests.py  connection_timeout_tests.py  content_frame_dispatcher_tests.py  data_tests.py  exceptions_test.py  forward_server.py  frame_tests.py  heartbeat_tests.py  io_services_test_stubs.py  parameter_tests.py  run.py  run_tests.py  simplebuffer_tests.py  test_async_adapters.py  test_async_send_consume.py  test_async_send_get.py  test_basic.py  test_threads.py  threaded_test_wrapper.py  timeout_tests.py  tornado_tests.py  utils_tests.py
unit_tests/: heartbeat_tests.py
utils/: codegen.py
(+256 files in other folders)
