[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pika"
version = "1.4.0b0"
maintainers = [
    {name = "Gavin M. Roy", email = "gavinmroy@gmail.com"},
    {name = "Luke Bakken", email = "lukerbakken@gmail.com"}
]
license = {text = "BSD-3-Clause"}
description = "Pika Python AMQP Client Library"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: Jython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
dependencies = []
requires-python = ">=3.7"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://pika.readthedocs.io"
Source = "https://github.com/pika/pika"

[project.optional-dependencies]
gevent = ["gevent"]
tornado = ["tornado"]
twisted = ["twisted"]

[tool.pyright]

[tool.ruff]
line-length = 100
target-version = "py37"
extend-exclude = [
    "pika/spec.py",       # generated by utils/codegen.py
    "utils/codegen.py",   # Python 2 script; asserts `sys.version_info.major == 2`
]

[tool.yapf]
based_on_style = "google"

[tool.setuptools]
zip-safe = true
include-package-data = false
packages = ["pika", "pika.adapters", "pika.adapters.utils"]

[tool.setuptools.package-data]
"*" = ["LICENSE", "README.rst"]

[tool.hatch.envs.default]
dependencies = [
    "coverage",
    "codecov",
    "gevent",
    "pytest>=7.0.0",
    "pytest-cov",
    "pytest-timeout",
    "tornado",
    "twisted",
    "mypy>=1.20; python_version >= '3.10'",
    "ruff",
    "yapf",
]

[tool.hatch.envs.default.scripts]
fmt = "yapf --in-place --style google --recursive --exclude 'pika/spec.py' pika/"
fmt-check = "yapf --diff --style google --recursive --exclude 'pika/spec.py' pika/"
lint = "ruff check pika/ tests/ examples/ utils/"
typecheck = "python -m mypy"
unit = "pytest tests/unit/"
test = "pytest"
rabbitmq = "docker run --pull always --detach --rm --publish 5672:5672 --publish 15672:15672 rabbitmq:management-alpine"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["*_test.py", "*_tests.py", "test_*.py"]
python_classes = ["Test*", "*Test", "*Tests", "*TestCase"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
