[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pika"
version = "1.4.0"
maintainers = [
    {name = "Gavin M. Roy", email = "gavinmroy@gmail.com"},
    {name = "Luke Bakken", email = "lukerbakken@gmail.com"}
]
license = {text = "BSD-3-Clause"}
description = "Pika Python AMQP Client Library"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: Jython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
dependencies = []
requires-python = ">=3.7"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://pika.github.io/pika/"
Documentation = "https://pika.github.io/pika/"
Source = "https://github.com/pika/pika"

[project.optional-dependencies]
gevent = ["gevent"]
tornado = ["tornado"]
twisted = ["twisted"]

[tool.pyright]

[tool.ruff]
line-length = 100
target-version = "py37"
extend-exclude = [
    "pika/spec.py",       # generated by utils/codegen.py
    "utils/codegen.py",   # code generation helper script
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes checks, including unused imports and unused variables
    "W",    # pycodestyle warnings
    "I",    # isort import sorting
    "UP",   # modern Python syntax suggestions
    "C",    # complexity and comprehension-related checks
    "PTH",  # prefer pathlib over os.path
    "D417", # missing documented parameters in docstrings
    "RET",  # return statement cleanup and consistency
    "PIE",  # flake8 pie
    "PERF", # performance anti-patterns
    "PLE",  # Pylint error rules
    "PLC",  # Pylint convention rules
    "RUF",  # Ruff-specific rules
    "FURB", # refurbishing and modernizing codebase
]

ignore = [
    "E501",    # line too long
    "C901",    # function is too complex
    "PLC0415", # import should be at the top level of a file
    "PERF203", # `try`-`except` within a loop incurs performance overhead
]

[tool.yapf]
based_on_style = "google"

[tool.setuptools]
zip-safe = true
include-package-data = false
packages = ["pika", "pika.adapters", "pika.adapters.utils"]

[tool.setuptools.package-data]
"*" = ["LICENSE", "README.md"]

[tool.hatch.envs.default]
dependencies = [
    "coverage",
    "codecov",
    "gevent",
    "pytest>=7.0.0",
    "pytest-cov",
    "pytest-timeout",
    "pytest-xdist",
    "tornado",
    "twisted",
    "mypy>=1.20; python_version >= '3.10'",
    "ruff",
    "yapf",
]

[tool.hatch.envs.default.scripts]
fmt = "yapf --in-place --style google --recursive --exclude 'pika/spec.py' pika/ tests/ examples/ utils/"
fmt-check = "yapf --diff --style google --recursive --exclude 'pika/spec.py' pika/ tests/ examples/ utils/"
lint = "ruff check pika/ tests/ examples/ utils/ --fix"
lint-check = "ruff check pika/ tests/ examples/ utils/"
typecheck = "python -m mypy"
unit = "pytest -n auto --dist=loadscope tests/unit/ {args}"
test = "pytest -n auto --dist=loadscope {args}"
rabbitmq = "docker run --name pika-rabbitmq --pull always --detach --rm --publish 5672:5672 --publish 15672:15672 rabbitmq:management-alpine"

[tool.hatch.envs.examples]
dependencies = [
    "tornado",
    "twisted",
    "retry",
    "msgpack",
    "pydantic",
]

[tool.hatch.envs.examples.scripts]
run = "python examples/{args}"

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mike",
    "gevent",
    "tornado",
    "twisted",
    "ruff",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --strict"
serve = "mkdocs serve"
serve-live = "mkdocs serve --livereload"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["*_test.py", "*_tests.py", "test_*.py"]
python_classes = ["Test*", "*Test", "*Tests", "*TestCase"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
filterwarnings = [
    "ignore:.*will be removed in Pika 2\\.0:DeprecationWarning",
]
