[metadata]
name = pika
version = 1.3.0
maintainer = Gavin M. Roy
maintainer_email = gavinmroy@gmail.com
license = BSD-3-Clause
description = Pika Python AMQP Client Library
url = https://pika.readthedocs.io
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD 3-Clause "New" or "Revised" License (BSD-3-Clause)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: Jython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Communications
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Networking
project_urls =
    Source = https://github.com/pika/pika

[options]
zip_safe = True
packages = find:
install_requires =

[bdist_wheel]
universal = 1

[options.packages.find]
include = pika; pika.*

[options.extras_require]
gevent = gevent
tornado = tornado
twisted = twisted

[options.package_data]
* = LICENSE, README.rst
